# curso-desarrollador-kurento

./: .gitignore  README.md  c-intro.gpp.md  c-intro.md  c_intro.md  curso-desarrollador-kurento.code-workspace  glib-gobject-intro.gpp.md  glib-intro.md  glib_intro.md  gst-launch-examples.txt  gstreamer-intro.gpp.md  make-cmake.gpp.md  make-cmake.md  make_cmake.md  to-do.md  video-codecs-containers.gpp.md  video_codecs_containers.md
src/: c_dlopen_main.c  c_include2_main.c  c_intro.c  c_lib_main.c  c_libm.c  c_tools.c  c_types.c  c_types_array.c  cmake_json_main.c  make_demo_CMakeLists.txt  make_demo_Makefile  make_demo_calc.c  make_demo_main.c
src/c-intro/: c-args-main.c  c-args-pointer.c  c-args-value.c  c-dlopen-calc.c  c-dlopen-main.c  c-include1-main.c  c-include2-calc.h  c-include2-main.c  c-lib-main.c  c-types-array.c
src/cmake-json/: CMakeLists.txt
src/cmake_json/: CMakeLists.txt  main.c
src/glib-ex-1/: CMakeLists.txt  main.c
src/glib-exercise/: CMakeLists.txt  main.c
src/glib-intro/: CMakeLists.txt  main.c
src/glib_ex_1/: CMakeLists.txt
src/glib_intro/: CMakeLists.txt  main.c
src/gobject-intro/: CMakeLists.txt  main.c  myapp-person.c  myapp-person.h  myapp-student.c  myapp-student.h  myapp-teacher.c  myapp-teacher.h
src/gobject_intro/: CMakeLists.txt  main.c  myapp_person.c  myapp_person.h  myapp_student.c  myapp_student.h
src/gstreamer-1-hello-world/: main.c
src/gstreamer-2-hello-world-filter/: main.c
src/gstreamer-3-maybe-pads/: CMakeLists.txt  main.c
src/gstreamer-example-1/: CMakeLists.txt
src/gstreamer-full-example/: main.c
src/gstreamer-hello-world-filter/: CMakeLists.txt
src/make-intro/: CMakeLists.txt  make-intro-Makefile  make-intro-main.c
src/make_intro/: CMakeLists.txt  make_intro_Makefile  make_intro_main.c
